new version + test

--- a/styles/helloblock.css
+++ b/styles/helloblock.css
@@ -1,5 +1,5 @@
 .helloblock{
-    width: 900px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     color: #95ff21;
@@ -59,4 +59,17 @@
     border-radius: 128px;
     width: 128px;
     border: 5px solid #95ff21;
+}
+
+
+.scroll-animation.floating2{
+  position: absolute;
+  opacity: 0;
+  margin-top: 200px;
+}
+.scroll-animation.floating2.element-show {
+  position: absolute;
+  opacity: 1;
+  transition: all 1s;
+  margin-top: 0;
 }
