--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ body{
     position:fixed;
     transition: all 1s;
     opacity: 0;
+    pointer-events: none;
 }
 .hidden .spinner{
     display: none;
