--- a/styles/imagebrowser.css
+++ b/styles/imagebrowser.css
@@ -5,13 +5,17 @@
     top: 0;
     left: 0;
     background-color: #17123394;
-    background-image: url(../images/Close.png);
+    /*background-image: url(../images/Close.png);*/
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 50%;
     
     width: 100%;
     height: 100%;
+    
+    opacity: 1;
+    pointer-events: all;
+    transition: all 0.5s;
 }
 
 #image_browser .close_button:hover{
@@ -32,4 +36,19 @@
     background-size: 52px;
     background-image: url(../images/Close.png);
     border-radius: 8px;
+}
+
+#image_browser img {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    height: 80%;
+    opacity: 1;
+}
+
+#image_browser.hidden {
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s;
 }
