--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,3 +44,11 @@ hr{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.unselect{
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
