--- a/styles/imagebrowser.css
+++ b/styles/imagebrowser.css
@@ -39,11 +39,16 @@
 }
 
 #image_browser img {
+    
+    object-fit: contain;
+    width: 100%;
+    height: 88%;
+
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
-    height: 88%;
+    
     opacity: 1;
 }
 
