--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -52,7 +52,9 @@
 }
 
 #portfolio .preview{
+    object-fit: contain;
     width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
