--- a/styles/resume.css
+++ b/styles/resume.css
@@ -2,12 +2,20 @@
     width: 900px;
     margin-left: auto;
     margin-right: auto;
-    color: #9bff31;
-    text-shadow: 0 0 10px #94ff21b4, 1px 0px 1.75px #3d0066, -1px 0px 1.75px #3d0066, 0px 1px 1.75px #3d0066, 0px -2px 1.75px #3d0066;
+    color: #92ff1d;
+    text-shadow: 0 0 10px #94ff219d, 1px 0px 1.75px #3d0066, -1px 0px 1.75px #3d0066, 0px 2px 2px #3d0066, 0px -1px 1.75px #3d0066;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.38;
+    line-height: 1.42;
     font-size: 15pt; 
 }
+ul>ul>li{
+  font-size: 13pt; 
+}
+#resume h3{
+  font-weight: 300;
+  text-decoration: underline;
+}
+
 #resume h2, #contact h2{
     font-size: 30pt; 
     font-weight: 400;
