--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,3 +62,80 @@ hr{
 #github_button img{
     display:block
 }
+
+
+
+
+
+#x_content{
+    position:absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#content.element-show>:nth-child(1)
+{
+    transition-delay: 0.00s;
+}
+#content.element-show>:nth-child(2)
+{
+    transition-delay: 0.15s, 0.15s, 0;
+}
+#content.element-show>:nth-child(3)
+{
+    transition-delay: 0.30s, 0.30s, 0;
+}
+#content.element-show>a{
+    transform: translate(0 , 0);
+    opacity: 1;
+    transition-property: transform, opacity, background-color;
+    transition-duration: 0.38s, 0.38s, 0.4s;
+    transition-timing-function: ease-in-out;
+}
+
+#content a{
+    background-color: #2f2c4f;
+
+    transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+
+
+    color: azure;
+    text-decoration: none;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16pt;
+    text-transform: uppercase;
+    
+    display: flex; /* Используем flexbox для удобного выравнивания */
+    justify-content: center; /* Выравниваем по центру горизонтально */
+    align-items: center; /* Выравниваем по центру вертикально */
+    width: 170pt; 
+    height: 42pt; 
+    margin: auto;
+
+    border-radius: 14pt;
+
+   
+    transform: translate(0, 100%);
+    
+
+    margin-bottom: 2pt;
+
+    position: relative;
+    opacity: 0;
+}
+#content a:hover{
+    background-color: #3f3b6d;
+
+    transition-property: background-color;
+    transition-duration: 0.12s;
+    transition-timing-function: ease-in-out;
+}
+#content a::before{
+    content:"↓";
+    /*padding-left: 16px;*/
+    position: absolute;
+    left: 10pt;
+}
