--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,73 +67,84 @@ hr{
 
 
 
-#x_content{
-    position:absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
-#content.element-show>:nth-child(1)
+
+#content.element-show a:nth-child(1)
 {
-    transition-delay: 0.00s;
+    transition-delay: 0, 0;
 }
-#content.element-show>:nth-child(2)
+#content.element-show a:nth-child(2)
 {
-    transition-delay: 0.15s, 0.15s, 0;
+    transition-delay: 0.15s, 0.15s;
 }
-#content.element-show>:nth-child(3)
+#content.element-show a:nth-child(3)
 {
-    transition-delay: 0.30s, 0.30s, 0;
+    transition-delay: 0.30s, 0.30s;
 }
-#content.element-show>a{
+#content.element-show a{
     transform: translate(0 , 0);
     opacity: 1;
-    transition-property: transform, opacity, background-color;
-    transition-duration: 0.38s, 0.38s, 0.4s;
+    transition-property: transform, opacity;
+    transition-duration: 0.38s, 0.38s;
     transition-timing-function: ease-in-out;
 }
 
 #content a{
-    background-color: #2f2c4f;
-
+    transform: translate(0, 100%);
+    opacity: 0;
+    
     transition-property: background-color;
-    transition-duration: 1s;
+    transition-duration: 0.4s;
     transition-timing-function: ease-in-out;
+    
+    width: 10em; 
+    height: 2.7em; 
+
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    position: relative;
+
+    margin: auto;
+    margin-bottom: 2pt;
 
 
     color: azure;
     text-decoration: none;
-
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 16pt;
+    font-size: 1.5VMAX;
     text-transform: uppercase;
-    
+}
+
+
+
+#content a p{
+
+
+    border-radius: 0.6em;
+
+    background-color: #2f2c4f;
+
     display: flex; /* Используем flexbox для удобного выравнивания */
     justify-content: center; /* Выравниваем по центру горизонтально */
     align-items: center; /* Выравниваем по центру вертикально */
-    width: 170pt; 
-    height: 42pt; 
-    margin: auto;
+      
+    width: 100%; 
+    height: 100%; 
 
-    border-radius: 14pt;
-
-   
-    transform: translate(0, 100%);
-    
-
-    margin-bottom: 2pt;
-
-    position: relative;
-    opacity: 0;
+    transition-duration: 0.7s;
 }
-#content a:hover{
+#content a p:hover{
     background-color: #3f3b6d;
 
-    transition-property: background-color;
+    transition-property: all;
     transition-duration: 0.12s;
     transition-timing-function: ease-in-out;
 }
-#content a::before{
+
+
+
+#content a p::before{
     content:"↓";
     /*padding-left: 16px;*/
     position: absolute;
