--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,7 +75,7 @@ hr{
     width: 100%;
     height: 100%;
     
-    background-image: url('../svgs/github-mark-white.svg');
+    background-image: url('../svgs/IconGithubWhite.svg');
     background-repeat: no-repeat;
     background-size: 72px;
     background-position: bottom 6px right 6px;
